fix: node hiding issue and edit form edit icon overlapping (#131)
fix: node hiding issue and edit form edit icon overlapping

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -3,8 +3,11 @@
     stroke-width: 2;
 }
 
-[data-ctrl-n-menu-id] circle {
-    fill: black;
+.node.filter{
+    [data-ctrl-n-menu-id] circle {
+        fill: black;
+        opacity: 0;
+    }
 }
 
 #tree>svg {
@@ -86,7 +89,7 @@
                 div[data-filter-close]{
                     @extend .d-none;
                 }
-                @extend .row,.gap-3;
+                @extend .row,.gap-3,.flex-wrap;
                 & div{
                     @extend .bg-white,.shadow,.rounded-2,.fs-6,.py-3,.px-3,.col-md,.align-items-center,.d-flex,.justify-content-between;
                     color: #0d2c3678;   
@@ -221,7 +224,7 @@
         background-color: transparent !important;
         position: absolute !important;
         top: 0 !important;
-        left: 18px !important;
+        left: 0px !important;
     }
 
     .boc-form-fieldset {
